# CV_prep

./: main.py  pyproject.toml  yolo26n.cache
manual_pipeline/: build_engine.py  export_to_onnx.py  trt_camera_pipeline.py
pipelines/: Classification_WebcamStream_better.py  Classification_Webcam_Async.py  Detection_Webcam_Async.py  Detection_webcam.py  Tracking_Webcam.py  Tracking_tRT_pinned.py  Tracking_webcam_tRT.py  classification_webcam.py
pipelines/utils/: AsyncCamera.py  export_yolo_tRT.py
tRT_manual_new/: build_engine.py  export_to_onnx.py  inspect_engine.py  pseudo_trt_camera_pipeline.py
